--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,8 +12,8 @@
     <button ion-item *ngFor="let item of items">
       <ion-icon [name]="item.icon" item-start></ion-icon>
       {{ item.title }}
-      <div class="item-note" item-end>
-        {{ item.note }}
+      <div item-end>
+        {{ item.date }} - {{ item.time }}
       </div>
     </button>
   </ion-list>
