--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-list>
-    <button ion-item *ngFor="let item of items">
+    <button ion-item *ngFor="let item of items" (click)="showTodoDetails(item)">
       <ion-icon [name]="item.icon" item-start></ion-icon>
       {{ item.title }}
       <div item-end>
